[project]
name = "dartwork-mpl"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91.main@gmail.com" },
    { name = "Wonjun Choi", email = "wonjunn.choi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "colorspacious>=1.1.2",
    "matplotlib>=3.10.1",
    "numpy>=1.26",
    "palettable>=3.3.3",
    "scipy>=1.15.2",
]

[project.scripts]
dmpl = "dartwork_mpl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "notebook>=7.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
