[project]
name = "dartwork-mpl"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91.main@gmail.com" },
    { name = "Wonjun Choi", email = "wonjunn.choi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "colorspacious>=1.1.2",
    "matplotlib>=3.10.1",
    "numpy>=1.26",
    "palettable>=3.3.3",
    "scipy>=1.15.2",
]

[project.scripts]
dmpl = "dartwork_mpl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "notebook>=7.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.0.0",
    "shibuya>=2025.11.10",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.19.0",
    "sphinx-tabs>=3.4.7",
]

# Test configuration and commands
# Run tests with: uv run pytest
# Run specific test: uv run pytest tests/test_color_view.py
# Run with coverage: uv run pytest --cov=src/dartwork_mpl --cov-report=html

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
