[project]
name = "dartwork-mpl"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon Lee", email = "lsw91.main@gmail.com" },
    { name = "Wonjun Choi", email = "wonjunn.choi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "colorspacious>=1.1.2",
    "ipython>=8.32.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26",
    "palettable>=3.3.3",
    "scipy>=1.15.2",
]

[project.scripts]
mcp = "dartwork_mpl.cli:main"

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.13.3",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "notebook>=7.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.0.0",
    "shibuya>=2025.11.10",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.19.0",
    "sphinx-markdown-builder>=0.6.8",
    "sphinx-tabs>=3.4.7",
]

# Test configuration and commands
# Run tests with: uv run pytest
# Run specific test: uv run pytest tests/test_color_view.py
# Run with coverage: uv run pytest --cov=src/dartwork_mpl --cov-report=html

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dartwork_mpl"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file
# These files intentionally modify sys.path before importing
"docs/color_system/generate_assets.py" = ["E402"]
"docs/fonts/generate_assets.py" = ["E402"]
"docs/examples_source/layout_styling/plot_legend.py" = ["E402"]
